--- a/docs/progress/2025-05-15-progress.md
+++ b/docs/progress/2025-05-15-progress.md
@@ -1,43 +1,486 @@
-# Прогресс разработки — 15.05.2025
+# Журнал прогресса разработки - 2025-05-15
 
-## Основные доработки
+## ⚙️ Прочее
 
-### 1. Заказы (Orders)
-- На странице списка заказов теперь отображается не только ID проекта, но и его наименование и валюта.
-- Исправлено отображение цены: если цена отсутствует, выводится "-".
-- Исправлено отображение валюты: теперь валюта берётся из проекта, а не выбирается вручную.
-- В формах создания и редактирования заказа убрано поле "Валюта". Валюта автоматически подставляется на основе выбранного проекта.
-- На странице деталей заказа отображается наименование проекта и валюта.
-- Вся логика работы с валютой теперь централизована на уровне проекта.
+- Обновления и фиксация состояния на 2025-05-15 ([f80a935](https://github.com/alcompstudio/studio/commit/f80a9359e9e2dd820d98314610d3fe008a132bff)) (Автор: alcompstudio)
+  ```
+  Changed files:
+  ```
+- docs/components/app/(app)/orders/[orderId]/edit/page.md ([.sequelizerc](https://github.com/alcompstudio/studio/commit/.ai/.last_doc_update_timestamp)) (Автор: "VS-Copilot-Chats/\320\236\321\202\320\277\321\200\320\260\320\262\320\272\320\260-\321\200\320\265\320\277\320\276\320\267\320\270\321\202\320\276\321\200\320\270\320\271-150525.prompt.md")
+  ```
+  docs/components/app/(app)/orders/[orderId]/page.md
+  docs/components/app/(app)/orders/new/page.md
+  docs/components/app/(app)/orders/page.md
+  docs/components/app/api/customers/route.md
+  docs/components/app/api/orders/route.md
+  docs/progress/2025-05-15-progress.md
+  docs/validation_report.md
+  src/app/(app)/_default_layout.metadata.json
+  src/app/(app)/_default_page.metadata.json
+  src/app/(app)/admin-dashboard/_default_page.metadata.json
+  src/app/(app)/dashboard/_default_page.metadata.json
+  src/app/(app)/finance-admin/_default_page.metadata.json
+  src/app/(app)/finance/_default_page.metadata.json
+  src/app/(app)/find-orders/_default_page.metadata.json
+  src/app/(app)/my-bids/_default_page.metadata.json
+  src/app/(app)/my-tasks/_default_page.metadata.json
+  src/app/(app)/orders/[orderId]/_default_page.metadata.json
+  src/app/(app)/orders/[orderId]/edit/_default_page.metadata.json
+  src/app/(app)/orders/[orderId]/edit/page.tsx
+  src/app/(app)/orders/[orderId]/page.tsx
+  src/app/(app)/orders/_default_page.metadata.json
+  src/app/(app)/orders/getOrderStatusVariant.metadata.json
+  src/app/(app)/orders/new/_default_page.metadata.json
+  src/app/(app)/orders/new/page.tsx
+  src/app/(app)/orders/page.tsx
+  src/app/(app)/projects/[projectId]/_default_page.metadata.json
+  src/app/(app)/projects/[projectId]/edit/_default_page.metadata.json
+  src/app/(app)/projects/_default_page.metadata.json
+  src/app/(app)/projects/new/_default_page.metadata.json
+  src/app/(app)/projects/page.tsx
+  src/app/(app)/settings/_default_page.metadata.json
+  src/app/(app)/users/_default_page.metadata.json
+  src/app/_default_layout.metadata.json
+  src/app/_default_page.metadata.json
+  src/app/api/auth/login/POST.metadata.json
+  src/app/api/auth/register/POST.metadata.json
+  src/app/api/customers/DELETE.metadata.json
+  src/app/api/customers/GET.metadata.json
+  src/app/api/customers/POST.metadata.json
+  src/app/api/customers/PUT.metadata.json
+  src/app/api/orders/DELETE.metadata.json
+  src/app/api/orders/GET.metadata.json
+  src/app/api/orders/POST.metadata.json
+  src/app/api/orders/PUT.metadata.json
+  src/app/api/orders/route.ts
+  src/app/api/projects/GET.metadata.json
+  src/app/api/projects/POST.metadata.json
+  src/app/api/projects/[projectId]/GET.metadata.json
+  src/app/api/projects/[projectId]/PUT.metadata.json
+  src/app/auth/_default_page.metadata.json
+  src/app/orders/new
+  src/components/auth/AuthForm.metadata.json
+  src/components/layout/CommunicationPanel.metadata.json
+  src/components/layout/Header.metadata.json
+  src/components/layout/_default_app-layout.metadata.json
+  src/components/orders/_default_add-etap-form.metadata.json
+  src/components/orders/_default_add-option-form.metadata.json
+  src/components/orders/_default_edit-etap-form.metadata.json
+  src/components/orders/_default_edit-option-form.metadata.json
+  src/components/pages/_default_dashboard-page.metadata.json
+  src/components/temp/_default_TemporaryTestComponent.metadata.json
+  src/components/ui/AlertDialogFooter.metadata.json
+  src/components/ui/AlertDialogHeader.metadata.json
+  src/components/ui/Badge.metadata.json
+  src/components/ui/Calendar.metadata.json
+  src/components/ui/ChartStyle.metadata.json
+  src/components/ui/DialogFooter.metadata.json
+  src/components/ui/DialogHeader.metadata.json
+  src/components/ui/DropdownMenuShortcut.metadata.json
+  src/components/ui/FormField.metadata.json
+  src/components/ui/MenubarGroup.metadata.json
+  src/components/ui/MenubarMenu.metadata.json
+  src/components/ui/MenubarPortal.metadata.json
+  src/components/ui/MenubarRadioGroup.metadata.json
+  src/components/ui/MenubarShortcut.metadata.json
+  src/components/ui/MenubarSub.metadata.json
+  src/components/ui/SheetFooter.metadata.json
+  src/components/ui/SheetHeader.metadata.json
+  src/components/ui/Skeleton.metadata.json
+  src/components/ui/Toaster.metadata.json
+  src/components/ui/useFormField.metadata.json
+  src/components/ui/useSidebar.metadata.json
+  src/hooks/reducer.metadata.json
+  src/hooks/toast.metadata.json
+  src/hooks/useIsMobile.metadata.json
+  src/hooks/useToast.metadata.json
+  src/lib/cn.metadata.json
+  src/lib/models/Order.ts
+  src/lib/models/_default_Customer.metadata.json
+  src/lib/models/_default_Order.metadata.json
+  src/lib/models/_default_Project.metadata.json
+  src/lib/models/_default_User.metadata.json
+  src/lib/models/connectDB.metadata.json
+  src/lib/runMigrations.metadata.json
+  src/lib/types.ts
+  src/migrations/006_add_price_to_orders_table.sql
+  src/services/getCurrencyRates.metadata.json
+  src/utils/useGoogleFont.metadata.json
+  
+  57fb5ab34185f929ea26fee67feffdd267f8d63a
+  57fb5ab
+  alcompstudio
+  alcompstudio@gmail.com
+  Thu May 15 13:25:05 2025 +0300
+  Добавлен studio_app.tar.gz в .gitignore
+  
+  Changed files:
+  ```
+- alcompstudio@gmail.com ([](https://github.com/alcompstudio/studio/commit/.gitignore)) (Автор: 8e089b645fed62eccf2662b548ac4408938e7baf)
+  ```
+  Thu May 15 13:17:29 2025 +0300
+  Полуавтоматическая комплексная документация по разработке для ИИ агентов
+  
+  Changed files:
+  ```
+- .ai/pending-documentation-updates.md ([.ai/agent-guide.md](https://github.com/alcompstudio/studio/commit/.ai/.last_doc_update_timestamp)) (Автор: .ai/config.yaml)
+  ```
+  .github/workflows/docs.yml
+  .husky/post-commit
+  .husky/pre-commit
+  .vscode/documentation-updater.js
+  .vscode/settings.json
+  .vscode/tasks.json
+  111.txt
+  DEPLOY_GUIDE.md
+  docs/.next/types/app/(app)/admin-dashboard/page.md
+  docs/.next/types/app/(app)/dashboard/page.md
+  docs/.next/types/app/(app)/finance-admin/page.md
+  docs/.next/types/app/(app)/finance/page.md
+  docs/.next/types/app/(app)/find-orders/page.md
+  docs/.next/types/app/(app)/my-bids/page.md
+  docs/.next/types/app/(app)/my-tasks/page.md
+  docs/.next/types/app/(app)/orders/[orderId]/edit/page.md
+  docs/.next/types/app/(app)/orders/[orderId]/page.md
+  docs/.next/types/app/(app)/orders/new/page.md
+  docs/.next/types/app/(app)/orders/page.md
+  docs/.next/types/app/(app)/projects/[projectId]/edit/page.md
+  docs/.next/types/app/(app)/projects/[projectId]/page.md
+  docs/.next/types/app/(app)/projects/new/page.md
+  docs/.next/types/app/(app)/projects/page.md
+  docs/.next/types/app/(app)/settings/page.md
+  docs/.next/types/app/(app)/users/page.md
+  docs/.next/types/app/api/auth/login/route.md
+  docs/.next/types/app/api/auth/register/route.md
+  docs/.next/types/app/api/customers/route.md
+  docs/.next/types/app/api/orders/route.md
+  docs/.next/types/app/api/projects/[projectId]/route.md
+  docs/.next/types/app/api/projects/route.md
+  docs/.next/types/app/auth/page.md
+  docs/.next/types/app/layout.md
+  docs/.next/types/app/page.md
+  docs/README.md
+  docs/architecture.md
+  docs/components/README.md
+  docs/components/ai/ai-instance.md
+  docs/components/app/(app)/admin-dashboard/page.md
+  docs/components/app/(app)/dashboard/page.md
+  docs/components/app/(app)/finance-admin/page.md
+  docs/components/app/(app)/finance/page.md
+  docs/components/app/(app)/find-orders/page.md
+  docs/components/app/(app)/layout.md
+  docs/components/app/(app)/my-bids/page.md
+  docs/components/app/(app)/my-tasks/page.md
+  docs/components/app/(app)/orders/[orderId]/edit/page.md
+  docs/components/app/(app)/orders/[orderId]/page.md
+  docs/components/app/(app)/orders/mockOrders.md
+  docs/components/app/(app)/orders/new/page.md
+  docs/components/app/(app)/orders/page.md
+  docs/components/app/(app)/page.md
+  docs/components/app/(app)/projects/[projectId]/edit/page.md
+  docs/components/app/(app)/projects/[projectId]/page.md
+  docs/components/app/(app)/projects/mockProjects.md
+  docs/components/app/(app)/projects/new/page.md
+  docs/components/app/(app)/projects/page.md
+  docs/components/app/(app)/settings/page.md
+  docs/components/app/(app)/users/page.md
+  docs/components/app/api/auth/login/route.md
+  docs/components/app/api/auth/register/route.md
+  docs/components/app/api/customers/route.md
+  docs/components/app/api/orders/route.md
+  docs/components/app/api/projects/[projectId]/route.md
+  docs/components/app/api/projects/route.md
+  docs/components/app/auth/page.md
+  docs/components/app/layout.md
+  docs/components/app/page.md
+  docs/components/auth/auth-form.md
+  docs/components/components/auth/auth-form.md
+  docs/components/components/layout/app-layout.md
+  docs/components/components/layout/communication-panel.md
+  docs/components/components/layout/header.md
+  docs/components/components/layout/toaster-client.md
+  docs/components/components/orders/add-etap-form.md
+  docs/components/components/orders/add-option-form.md
+  docs/components/components/orders/edit-etap-form.md
+  docs/components/components/orders/edit-option-form.md
+  docs/components/components/pages/dashboard-page.md
+  docs/components/components/ui/accordion.md
+  docs/components/components/ui/alert-dialog.md
+  docs/components/components/ui/alert.md
+  docs/components/components/ui/avatar.md
+  docs/components/components/ui/badge.md
+  docs/components/components/ui/button.md
+  docs/components/components/ui/calendar.md
+  docs/components/components/ui/card.md
+  docs/components/components/ui/chart.md
+  docs/components/components/ui/checkbox.md
+  docs/components/components/ui/dialog.md
+  docs/components/components/ui/dropdown-menu.md
+  docs/components/components/ui/form.md
+  docs/components/components/ui/input.md
+  docs/components/components/ui/label.md
+  docs/components/components/ui/menubar.md
+  docs/components/components/ui/popover.md
+  docs/components/components/ui/progress.md
+  docs/components/components/ui/radio-group.md
+  docs/components/components/ui/scroll-area.md
+  docs/components/components/ui/select.md
+  docs/components/components/ui/separator.md
+  docs/components/components/ui/sheet.md
+  docs/components/components/ui/sidebar.md
+  docs/components/components/ui/skeleton.md
+  docs/components/components/ui/slider.md
+  docs/components/components/ui/switch.md
+  docs/components/components/ui/table.md
+  docs/components/components/ui/tabs.md
+  docs/components/components/ui/textarea.md
+  docs/components/components/ui/toast.md
+  docs/components/components/ui/toaster.md
+  docs/components/components/ui/tooltip.md
+  docs/components/hooks/use-mobile.md
+  docs/components/hooks/use-toast.md
+  docs/components/layout/app-layout.md
+  docs/components/layout/communication-panel.md
+  docs/components/layout/header.md
+  docs/components/layout/toaster-client.md
+  docs/components/lib/db.md
+  docs/components/lib/migrate.md
+  docs/components/lib/models/Customer.md
+  docs/components/lib/models/Order.md
+  docs/components/lib/models/OrderStage.md
+  docs/components/lib/models/Project.md
+  docs/components/lib/models/User.md
+  docs/components/lib/models/WorkTask.md
+  docs/components/lib/models/index.md
+  docs/components/lib/types.md
+  docs/components/lib/utils.md
+  docs/components/orders/add-etap-form.md
+  docs/components/orders/add-option-form.md
+  docs/components/orders/edit-etap-form.md
+  docs/components/orders/edit-option-form.md
+  docs/components/pages/dashboard-page.md
+  docs/components/services/currency-converter.md
+  docs/components/temp/TemporaryTestComponent.md
+  docs/components/ui/accordion.md
+  docs/components/ui/alert-dialog.md
+  docs/components/ui/alert.md
+  docs/components/ui/avatar.md
+  docs/components/ui/badge.md
+  docs/components/ui/button.md
+  docs/components/ui/calendar.md
+  docs/components/ui/card.md
+  docs/components/ui/chart.md
+  docs/components/ui/checkbox.md
+  docs/components/ui/dialog.md
+  docs/components/ui/dropdown-menu.md
+  docs/components/ui/form.md
+  docs/components/ui/input.md
+  docs/components/ui/label.md
+  docs/components/ui/menubar.md
+  docs/components/ui/popover.md
+  docs/components/ui/progress.md
+  docs/components/ui/radio-group.md
+  docs/components/ui/scroll-area.md
+  docs/components/ui/select.md
+  docs/components/ui/separator.md
+  docs/components/ui/sheet.md
+  docs/components/ui/sidebar.md
+  docs/components/ui/skeleton.md
+  docs/components/ui/slider.md
+  docs/components/ui/switch.md
+  docs/components/ui/table.md
+  docs/components/ui/tabs.md
+  docs/components/ui/textarea.md
+  docs/components/ui/toast.md
+  docs/components/ui/toaster.md
+  docs/components/ui/tooltip.md
+  docs/components/utils/fonts.md
+  docs/decisions/YYYYMMDD-template-adr.md
+  docs/documentation-system-guide.md
+  docs/next.config.md
+  docs/progress/2025-05-14-progress.md
+  docs/progress/2025-05-14.md
+  docs/tailwind.config.md
+  docs/validation_report.md
+  package-lock.json
+  package.json
+  project-metadata.yaml
+  scripts/docs/checkpoint-detector.js
+  scripts/docs/code-structure-extractor.js
+  scripts/docs/docs-validator.js
+  scripts/docs/documentation-updater.js
+  scripts/docs/git-progress-generator.js
+  scripts/docs/lib/ast-helpers.js
+  scripts/docs/lib/output-generators.js
+  src/app/(app)/_default_layout.metadata.json
+  src/app/(app)/_default_page.metadata.json
+  src/app/(app)/admin-dashboard/_default_page.metadata.json
+  src/app/(app)/admin-dashboard/default.metadata.json
+  src/app/(app)/dashboard/_default_page.metadata.json
+  src/app/(app)/dashboard/default.metadata.json
+  src/app/(app)/default.metadata.json
+  src/app/(app)/finance-admin/_default_page.metadata.json
+  src/app/(app)/finance-admin/default.metadata.json
+  src/app/(app)/finance/_default_page.metadata.json
+  src/app/(app)/finance/default.metadata.json
+  src/app/(app)/find-orders/_default_page.metadata.json
+  src/app/(app)/find-orders/default.metadata.json
+  src/app/(app)/my-bids/_default_page.metadata.json
+  src/app/(app)/my-bids/default.metadata.json
+  src/app/(app)/my-tasks/_default_page.metadata.json
+  src/app/(app)/my-tasks/default.metadata.json
+  src/app/(app)/orders/[orderId]/_default_page.metadata.json
+  src/app/(app)/orders/[orderId]/default.metadata.json
+  src/app/(app)/orders/[orderId]/edit/_default_page.metadata.json
+  src/app/(app)/orders/[orderId]/edit/default.metadata.json
+  src/app/(app)/orders/_default_page.metadata.json
+  src/app/(app)/orders/default.metadata.json
+  src/app/(app)/orders/getOrderStatusVariant.metadata.json
+  src/app/(app)/orders/new/_default_page.metadata.json
+  src/app/(app)/orders/new/default.metadata.json
+  src/app/(app)/projects/[projectId]/_default_page.metadata.json
+  src/app/(app)/projects/[projectId]/default.metadata.json
+  src/app/(app)/projects/[projectId]/edit/_default_page.metadata.json
+  src/app/(app)/projects/[projectId]/edit/default.metadata.json
+  src/app/(app)/projects/_default_page.metadata.json
+  src/app/(app)/projects/default.metadata.json
+  src/app/(app)/projects/new/_default_page.metadata.json
+  src/app/(app)/projects/new/default.metadata.json
+  src/app/(app)/settings/_default_page.metadata.json
+  src/app/(app)/settings/default.metadata.json
+  src/app/(app)/users/_default_page.metadata.json
+  src/app/(app)/users/default.metadata.json
+  src/app/_default_layout.metadata.json
+  src/app/_default_page.metadata.json
+  src/app/api/auth/login/POST.metadata.json
+  src/app/api/auth/register/POST.metadata.json
+  src/app/api/customers/DELETE.metadata.json
+  src/app/api/customers/GET.metadata.json
+  src/app/api/customers/POST.metadata.json
+  src/app/api/customers/PUT.metadata.json
+  src/app/api/orders/DELETE.metadata.json
+  src/app/api/orders/GET.metadata.json
+  src/app/api/orders/POST.metadata.json
+  src/app/api/orders/PUT.metadata.json
+  src/app/api/projects/GET.metadata.json
+  src/app/api/projects/POST.metadata.json
+  src/app/api/projects/[projectId]/GET.metadata.json
+  src/app/api/projects/[projectId]/PUT.metadata.json
+  src/app/auth/_default_page.metadata.json
+  src/app/auth/default.metadata.json
+  src/app/default.metadata.json
+  src/components/auth/AuthForm.metadata.json
+  src/components/auth/auth-form.metadata.json
+  src/components/layout/CommunicationPanel.metadata.json
+  src/components/layout/Header.metadata.json
+  src/components/layout/_default_app-layout.metadata.json
+  src/components/layout/default.metadata.json
+  src/components/orders/_default_add-etap-form.metadata.json
+  src/components/orders/_default_add-option-form.metadata.json
+  src/components/orders/_default_edit-etap-form.metadata.json
+  src/components/orders/_default_edit-option-form.metadata.json
+  src/components/orders/default.metadata.json
+  src/components/pages/_default_dashboard-page.metadata.json
+  src/components/pages/default.metadata.json
+  src/components/temp/_default_TemporaryTestComponent.metadata.json
+  src/components/ui/AlertDialogFooter.metadata.json
+  src/components/ui/AlertDialogHeader.metadata.json
+  src/components/ui/Badge.metadata.json
+  src/components/ui/Calendar.metadata.json
+  src/components/ui/ChartStyle.metadata.json
+  src/components/ui/DialogFooter.metadata.json
+  src/components/ui/DialogHeader.metadata.json
+  src/components/ui/DropdownMenuShortcut.metadata.json
+  src/components/ui/FormField.metadata.json
+  src/components/ui/MenubarGroup.metadata.json
+  src/components/ui/MenubarMenu.metadata.json
+  src/components/ui/MenubarPortal.metadata.json
+  src/components/ui/MenubarRadioGroup.metadata.json
+  src/components/ui/MenubarShortcut.metadata.json
+  src/components/ui/MenubarSub.metadata.json
+  src/components/ui/SheetFooter.metadata.json
+  src/components/ui/SheetHeader.metadata.json
+  src/components/ui/Skeleton.metadata.json
+  src/components/ui/Toaster.metadata.json
+  src/components/ui/button.metadata.json
+  src/components/ui/useFormField.metadata.json
+  src/components/ui/useSidebar.metadata.json
+  src/hooks/reducer.metadata.json
+  src/hooks/toast.metadata.json
+  src/hooks/useIsMobile.metadata.json
+  src/hooks/useToast.metadata.json
+  src/lib/cn.metadata.json
+  src/lib/models/_default_Customer.metadata.json
+  src/lib/models/_default_Order.metadata.json
+  src/lib/models/_default_Project.metadata.json
+  src/lib/models/_default_User.metadata.json
+  src/lib/models/connectDB.metadata.json
+  src/lib/models/default.metadata.json
+  src/lib/runMigrations.metadata.json
+  src/services/getCurrencyRates.metadata.json
+  src/utils/useGoogleFont.metadata.json
+  
+  f4eecb047364b0b1e350a6ec3359d22001d20586
+  f4eecb0
+  alcompstudio
+  alcompstudio@gmail.com
+  Thu May 15 01:36:36 2025 +0300
+  chore: add comment to button.tsx for docs testing
+  
+  Changed files:
+  ```
+- alcompstudio@gmail.com ([](https://github.com/alcompstudio/studio/commit/src/components/ui/button.tsx)) (Автор: 943e9b1ad90379829d2ec9d24211743993c9dd58)
+  ```
+  Thu May 15 01:35:47 2025 +0300
+  feat: add temporary test component for docs system
+  
+  Changed files:
+  ```
+- alcompstudio@gmail.com ([](https://github.com/alcompstudio/studio/commit/src/components/temp/TemporaryTestComponent.tsx)) (Автор: 2678f8a0a8c0c43183bff76b416c9b116022d26f)
+  ```
+  Tue May 13 17:34:15 2025 +0300
+  Текущие исправления в Проектах - завершение
+  
+  Changed files:
+  ```
+- src/lib/models/Project.ts ([src/app/(app)/projects/[projectId]/edit/page.tsx](https://github.com/alcompstudio/studio/commit/.vscode/extensions.json)) (Автор: src/app/(app)/projects/[projectId]/page.tsx)
+  ```
+  src/lib/types.ts
+  src/migrations/005_add_budget_currency_to_projects_table.sql
+  
+  a82ce407c7cf1bd3fa711d206d1d06a6b829b2cf
+  a82ce40
+  alcompstudio
+  alcompstudio@gmail.com
+  Sun May 11 18:17:16 2025 +0300
+  Feat: Восстановление проекта, настройка БД и API, исправление входа
+  
+  Changed files:
+  ```
+- src/app/(app)/projects/page.tsx ([.gitignore](https://github.com/alcompstudio/studio/commit/.env)) (Автор: package-lock.json)
+  ```
+  src/app/api/auth/login/route.ts
+  src/app/api/auth/register/route.ts
+  src/app/api/customers/route.ts
+  src/app/api/orders/route.ts
+  src/app/api/projects/route.ts
+  src/app/layout.tsx
+  src/components/auth/auth-form.tsx
+  src/components/layout/toaster-client.tsx
+  src/lib/db.ts
+  src/lib/migrate.ts
+  src/lib/models/Customer.ts
+  src/lib/models/Order.ts
+  src/lib/models/OrderStage.ts
+  src/lib/models/Project.ts
+  src/lib/models/User.ts
+  src/lib/models/WorkTask.ts
+  src/lib/models/index.ts
+  src/migrations/000_create_users_table.sql
+  src/migrations/001_create_customers_table.sql
+  src/migrations/002_create_projects_table.sql
+  src/migrations/003_create_orders_table.sql
+  src/migrations/004_create_order_stages_table.sql
+  src/test-db-connection.ts
+  ```
 
-### 2. Проекты (Projects)
-- На странице списка проектов теперь всегда отображается заголовок проекта (project.title или project.name).
-- Исправлены карточки проектов: корректно выводится название, статус, бюджет, валюта и клиент.
-- Исправлены возможные ошибки типов при отображении данных клиента.
-
-### 3. Миграции и модель Order
-- В базу данных добавлено поле price для заказов (через миграцию).
-- Модель Order обновлена: поле price теперь поддерживает типы string | number | null для корректной работы с DECIMAL.
-- Исправлены ошибки сериализации и получения заказов из БД.
-
-### 4. API и интеграция
-- Исправлены ошибки получения заказов и проектов через API.
-- Везде, где требуется, подгружаются проекты с валютой для корректного отображения.
-
-### 5. UI/UX
-- В карточках заказов и проектов улучшено визуальное представление информации.
-- В формах заказа валюта отображается рядом с ценой и не редактируется вручную.
-- В карточках заказов и проектов добавлены статусы с цветными бейджами и иконками.
-
-## Краткое описание архитектурных решений
-
-- Валюта теперь назначается только на уровне проекта и наследуется всеми заказами, связанными с проектом.
-- Для всех операций с заказами и проектами используется API Next.js и ORM Sequelize.
-- Вся бизнес-логика по отображению валюты и названия проекта централизована и не дублируется в разных компонентах.
-
-## Следующие шаги
-
-- Доработка страниц деталей проекта и заказа (вывод этапов, ставок, рабочих заданий и позиций).
-- Реализация фильтрации и поиска заказов и проектов.
-- Улучшение документации по API и компонентам.
-- Дальнейшее развитие финансового модуля и интеграции с ИИ.
